@@ -3,6 +3,14 @@ Thompson shell are marked w/ a `C:' in the details below.
 
 -------------------------------------------------------------------------------
 [osh-current]:
+fd2.c, util.c:
+	* Fixed the implementation of the fd2 `-e' command-line option so that
+	  it reflects the documented behavior, causing `-ef file' to correctly
+	  redirect both conventional output and diagnostic output from command
+	  to file.
+
+-------------------------------------------------------------------------------
+[osh-20081122]:
 mkconfig:
 	* Added a case for DragonFly BSD (uname -s == DragonFly).
 
@@ -1378,6 +1386,6 @@ goto.c:
 	* All releases of osh prior to and including 020214 were authored
 	  and maintained by Gunnar Ritter.
 
-Jeffrey Allen Neitzel						2008/11/14
+Jeffrey Allen Neitzel						2008/12/03
 
 @(#)$Id$
